added dyirbal to the mix

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -507,3 +507,11 @@
   pages={11--30},
   year={2000}
 }
+
+@book{dixon1972,
+  title={The Dyirbal language of north Queensland},
+  author={Dixon, Robert Malcolm Ward},
+  volume={9},
+  year={1972},
+  publisher={CUP Archive}
+}
