--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -485,8 +485,33 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
    \label{fig:rel-sub-do-io}
  \end{figure}
 
-\citet{caha2009} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. The main argument comes from ergative-absolutive languages, which was also one of \posscitet{bobaljik2006} argument with the implicational hierarchy for agreement. \citet{keenan1977} point out that some ergative-absolutive languages form a counterexample to their hierarchy. \citet{caha2009} points out that ergative subjects and oblique noun phrases use the same relativization strategy, which is not allowed with absolutive objects (which is also briefly mentioned in
-\citealt{bobaljik2006}).
+\citet{caha2009} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. The main argument comes from ergative-absolutive languages, which was also one of \posscitet{bobaljik2006} argument with the implicational hierarchy for agreement.
+
+\citet{keenan1977} point out that some ergative-absolutive languages form a counterexample to their hierarchy. One example comes from Dyirbal. Absolutive objects and absolutive subjects can be relativized. Ergative subjects, however, cannot.
+
+\ex.\label{ex:dyirbal-decl}
+\ag. balan d̦ugumbil ɲina-ɲu\\
+ \tsc{det}.\tsc{abs} woman.\tsc{abs} sit-\tsc{pass}\\
+ `The woman is sitting down.'\label{ex:dyirbal-sub}
+\bg. ŋad̦a balan d̦ugumbil buŗa-n\\
+ I.\tsc{erg} \tsc{det}.\tsc{abs} woman.\tsc{abs} see-\tsc{pres/past}\\
+ `I am watching the woman.'\flushfill{Dyirbal, \pgcitealt{dixon1972}{100}, my boldfacing}\label{ex:dyirbal-do}
+
+The embedded verb takes the marker -\tbf{ŋu} to indicate that there is a relative clause.
+
+\exg. balan \tbf{d̦ugumbil} ŋad̦a buŗa-\tbf{ŋu} ɲina-ɲu\\
+ \tsc{det}.\tsc{abs} woman.\tsc{abs} I see-\tsc{rel} sit-\tsc{pass}\\
+ `The woman whom I am watching is sitting down.'\flushfill{Dyirbal, \pgcitealt{dixon1972}{100}, my boldfacing}\label{ex:dyirbal-abs-sub}
+
+\exg. ŋad̦a balan \tbf{d̦ugumbil} ɲina-\tbf{ŋu} buŗa-n\\
+ I.\tsc{erg} \tsc{det}.\tsc{abs} woman.\tsc{abs} sit-\tsc{rel} see-\tsc{pres/past}\\
+ `I am watching the woman who is sitting down.'\flushfill{Dyirbal, \pgcitealt{dixon1972}{100}, my boldfacing}\label{ex:dyirbal-abs-do}
+
+Ergatives need to first be promoted to absolutives, creating a passive-like structure, and then the absolutive can be relativized.
+
+johnson abs/erg (keenan/comrie) already claimed the abs/erg absolutive relativization should be captured in terms of case and not grammatial function.
+
+\citet{caha2009} (which is also briefly mentioned in \citealt{bobaljik2006}) makes the more general claim, that also nom/acc should be formulized in terms of case, all of it together.
 
 Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
 
