werken in landau
op zondag?

--- a/variation.tex
+++ b/variation.tex
@@ -5,17 +5,34 @@
 I showed that headless relatives crosslinguistically make reference to the case scale: if two cases are in competition, it is always the same that wins.
 However, there is a second aspect to headless relatives, which differs across languages. That is, sometimes the case competition does not even take place, or rather, there is no winner to the competition. I show that whether is not the case competition takes place depends on the type of relative pronoun that is used. I distinguish two types of relative pronouns: \tsc{wh}-pronouns and \tsc{d}-pronouns.
 
-When the relative pronoun is a \tsc{wh}-pronoun, only the internal case can win. When the relative pronoun is a \tsc{d}-pronoun, both the internal and the external case can win.
+There are languages in which both the internal and the external case can win (like Gothic). There are also languages in which only the internal case can win. Crucially, there is no language in which a case competition takes place but only the external case can win.\footnote{
+There are languages in which the external case always surfaces, no matter the internal case. These languages are for instance Old English and Old Icelandic (and maybe Greek?). I come back that in Section X.
+} A possibility that is attested is that none of the case can win, that only matching cases give a winner. I summarize this in a table:
 
-%then have a particular order with the variation
+\begin{table}[H]
+	\center
+	\caption {Variation}
+		\begin{tabular}{ccc}
+		\toprule
+		 					& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
+								\cmidrule{2-3}
+		Gothic OHG		&	✔										&	✔									\\
+		\ac{mg} 	& ✔			 							&	*									\\
+    Polish    & *                   & *                 \\
+		n.a.    	& *										&	✔									\\
+		\bottomrule
+		\end{tabular}
+\end{table}
 
 Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
 
-People have also been describing it like this: formulation from Cinque in his book.
+People have also been describing it like this: formulation from Cinque in his book. (which is actually wrong)
 
 If it does not come from the input, where does it come from? I claim that it comes from other properties of German (or another language).
 
-A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages.
+A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages. Grosu 1994 linked richness of inflection to liberality. He actually talked about the richness of pro.
+
+
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I decompose the relative pronouns, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
 
 
@@ -172,25 +189,6 @@ same holds for \ac{ohg} but you just can't give the ungrammatical examples. but 
 
 \section{The different patterns}
 
-In Gothic, the more complex case wins.
-In \ac{ohg}, the more complex case wins, only if it is external.
-In \ac{mg}, the more complex case wins, only if it is internal.
-In Italian, case mismatch is not allowed.
-
-
-\begin{table}[H]
-	\center
-	\caption {Variation}
-		\begin{tabular}{ccc}
-		\toprule
-		 					& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
-								\cmidrule{2-3}
-		\ac{mg} 	& ✔			 							&	*									\\
-		\ac{ohg}	& *										&	✔									\\
-		Gothic		&	✔										&	✔									\\
-		\bottomrule
-		\end{tabular}
-\end{table}
 
 
 
